syntax = "proto3";

package franchise;

import "protos/franchise_common.proto";
import "google/protobuf/any.proto";

service FranchiseRequestService {
  rpc CreateFranchiseRequest(CreateFranchiseUserRequest) returns (FranchiseUserResponse);
  rpc GetFranchiseRequest(GetFranchiseRequestByUserID) returns (FranchiseRequestResponseList);
  rpc UpdateStatus(UpdateStatusRequest) returns (FranchiseUserResponse);
  rpc GetFranchiseRequests(GetFranchiseRequestByUserID) returns (FranchiseRequestResponseList);
  //rpc DeleteFranchiseRequest(FranchiseRequest) returns (FranchiseRequest);
}

message GetFranchiseRequestByUserID
{
	int32 user_id = 1;
}

message CreateFranchiseRequestFrontend
{
	int32 franchise_id = 2;
	repeated int32 services_id = 1;
	int32 owner_id = 3;
}



message CreateFranchiseUserRequest
{
	int32 franchise_id = 2;
	repeated int32 services_id = 1;
	int32 owner_id = 5;
	int32 user_id = 3;
	string investment_budget = 6;
	string space = 7;
}

message FranchiseUserResponse
{
	string response = 1;
	int32 conversionId = 2;
}


message FranchiseRequestResponseList {
  repeated FranchiseRequestResponse responses = 1;
}

message UpdateStatusRequest
{
	int32 franchise_request_id = 1;
	string is_request_status = 2;
}
