syntax = "proto3";
option csharp_namespace = "FranchiseGRPCService.Protos";

package franchise;

import "Protos/franchise_common.proto";
import "google/protobuf/empty.proto";

service FranchiseService {
  rpc CreateFranchise(CreateFranchiseRequest) returns (CreateFranchiseResponse);
  rpc GetAllFranchise(google.protobuf.Empty) returns (GetFranchiseResponse); 
  rpc GetFranchiseById(GetFranchiseByIdRequest) returns (GetFranchisesRespsonse);

  rpc FranchiseExist(FranchiseExistRequest) returns (FranchiseExistResponse);
  rpc IncreseViewCount(IncreseViewCountRequest) returns (IncreseViewCountResponse);

  rpc GetFranchiseByOwnerId(GetFranchiseByOwnerIdRequest) returns (GetFranchisesRespsonse);

  rpc UpdateFranchiseDetail(UpdateFranchiseDetailRequest) returns (UpdateFranchiseDetailResponse);

}

message UpdateFranchiseDetailRequest
{
	Franchise franchise = 1;
}

message UpdateFranchiseDetailResponse
{
	string response = 1;
}

message FranchiseExistRequest
{
	int32 user_id = 1;
}

message FranchiseExistResponse
{
	bool franchise_exist = 1;
}


message GetFranchiseByOwnerIdRequest 
{
	int32 ownerId = 1;
}


message GetFranchiseByIdRequest
{
	int32 franchiseId = 1;
}

message CreateFranchiseRequest 
{
	Franchise franchise = 1;
	repeated FranchiseGalleryRequest franchiseGalleryList = 2;
	repeated FranchiseServiceModelRequest franchiseServiceList = 3; 
	repeated FranchiseSelectedServiceRequest franchieSelectedServiceList = 5;
	FranchiseSocialModelRequest frachiseSocial = 4;
}

message GetFranchisesRespsonse
{
	Franchise franchise = 1;
	FranchiseSocialModelResponse franchiseSocial = 2;
	repeated FranchiseGalleryResponse franchiseGalleryList = 3;
	repeated FranchiseServiceModelResponse frachiseServiceList = 4;
	repeated FranchiseSelectedServiceResponse franchieSelectedServiceList = 6;
	repeated FranchiseReview franchiseReviewList = 5;
}

message GetAllFranchiseResponse
{
	Franchise franchise = 1;
	FranchiseSocialModelResponse franchiseSocial = 2;
	repeated FranchiseGalleryResponse franchiseGalleryList = 3;
}

message GetFranchiseResponse
{
	repeated GetAllFranchiseResponse franchiseLists = 1;
}

message CreateFranchiseResponse
{
	string response = 1;
}

message IncreseViewCountRequest
{
	int32 franchiseId = 1;
}

message IncreseViewCountResponse
{
	string response = 1;
}
